virt01/manual/torrent/youtubarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: youtubarr
  labels:
    app: youtubarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: youtubarr
  template:
    metadata:
      labels:
        app: youtubarr
    spec:
      serviceAccountName: youtubarr-sa
      containers:
        - name: youtubarr
          image: ghcr.io/diredirecrocs/youtubarr:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: youtubarr-pv
              mountPath: /data
            - name: oauth-secret-volume
              mountPath: /data/oauth.json
              subPath: oauth.json              
      volumes:
        - name: youtubarr-pv
          persistentVolumeClaim:
            claimName: youtubarr-pvc
        - name: oauth-secret-volume
          secret:
            secretName: youtubarr-oauth
