virt01/manual/torrent/youtubarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtubarr-svc
  labels:
    app: youtubarr
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: youtubarr
