virt01/manual/torrent/youtubarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtubarr-int-ingress-https
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
    - host: youtubarr.k3s.nf.lab
      http:
        paths:
          - backend:
              service:
                name: youtubarr-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - youtubarr.k3s.nf.lab
      secretName: youtubarr-int-cert-tls
